header area added

--- a/index.html
+++ b/index.html
@@ -19,29 +19,31 @@
     <!-- header area -->
     <header>
         <!-- nav bar area -->
-        <nav>
-            <h1>G3 Architects</h1>
-            <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-            </ul>
-        </nav>
-        <!-- branding area -->
-        <div class="branding-section">
-            <div class="branding-info">
-                <h2>Brand New
-                    Group of Architects
-                </h2>
-                <p>
-                    We’re an adaptive team of experts who use technology to solve complex problems. As cloud-native
-                    specialists, we leverage modern methods.
-                </p>
-                <button class="btn-primary">Explore More</button>
-            </div>
-            <div class="branding-img">
-                <img src="" alt="">
+        <div class="heading-section">
+            <nav class="navbar">
+                <h1 class="nav-title">G3 Architects</h1>
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">About</a></li>
+                    <li><a href="">Contact Us</a></li>
+                    <li><a href="">Login</a></li>
+                </ul>
+            </nav>
+            <!-- branding area -->
+            <div class="branding-section">
+                <div class="branding-info">
+                    <h2 class="branding-title">Brand New <br>
+                        Group of Architects
+                    </h2>
+                    <p>
+                        We’re an adaptive team of experts who use technology to solve complex problems. As cloud-native
+                        specialists, we leverage modern methods.
+                    </p>
+                    <button class="btn-primary">Explore More</button>
+                </div>
+                <div class="branding-img">
+                    <img src="images/banner.png" alt="">
+                </div>
             </div>
         </div>
     </header>
