--- a/index.html
+++ b/index.html
@@ -49,7 +49,24 @@
     </header>
     <!-- main area -->
     <main>
-
+        <div class="features-list">
+            <div class="feature-list-img">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+            </div>
+            <div class="feature-list-info">
+                <h2 class="feature-list-title">Quick list <span class="color-1">of Our</span> <span
+                        class="color-2">Features</span></h2>
+                <p>
+                    We specialize in product development, UX design, <br> engineering and architecture, and project
+                    delivery,
+                    and these are the industries we’re already well-versed in.
+                </p>
+                <button class="btn-primary">Explore-more</button>
+            </div>
+        </div>
     </main>
     <!-- footer area -->
     <footer>
