--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     </header>
     <!-- main area -->
     <main>
+        <!-- features list area -->
         <div class="features-list">
             <div class="feature-list-img">
                 <img src="images/team1.png" alt="">
@@ -60,13 +61,57 @@
                 <h2 class="feature-list-title">Quick list <span class="color-1">of Our</span> <span
                         class="color-2">Features</span></h2>
                 <p>
-                    We specialize in product development, UX design, <br> engineering and architecture, and project
+                    We specialize in product development, UX design, engineering and architecture, and project
                     delivery,
                     and these are the industries we’re already well-versed in.
                 </p>
-                <button class="btn-primary">Explore-more</button>
+                <button class="btn-primary">Explore more</button>
             </div>
         </div>
+
+        <!-- featues section area -->
+        <div class="features-section">
+            <div class="feature-section-info">
+                <h2 class="feature-section-title">Features you will <br> love & enjoy</h2>
+                <p class="feature-description">
+                    our skills in app modernization, refactoring, and custom software development can be seamlessly
+                    integrated anywhere.
+                </p>
+                <div class="feature-box">
+                    <h3>Dexktop & Mobile Version</h3>
+                    <p>
+                        We help industry-leading telecommunications companies like ROGERS scale for growth, deepen
+                        customer loyalty.......
+                    </p>
+                </div>
+                <div class="feature-box">
+                    <h3>Drag & Drop Builder</h3>
+                    <p>
+                        We power digital innovation for leading financial institutions by developing frictionless
+                        next-generation platforms that exemplify speed.......
+                    </p>
+                </div>
+                <div class="feature-box">
+                    <h3>Awesome Modern Design</h3>
+                    <p>
+                        Our secure software solutions help predict consumer needs and evolve the digital customer
+                        experience giants like Sport Chek.......
+                    </p>
+                </div>
+                <div class="feature-box">
+                    <h3>Super Easy to Edit</h3>
+                    <p>
+                        For mobile, service-based companies, response time is a high priority. Our streamlined
+                        cloud-based solutions create the operational.......
+                    </p>
+                </div>
+            </div>
+            <div class="feature-section-img">
+                <img src="images/architect.png" alt="">
+                <button class="btn-secondary"><span class="secondary"> 10+Year</span> <br> Experience</button>
+            </div>
+        </div>
+
     </main>
     <!-- footer area -->
     <footer>
