--- a/index.html
+++ b/index.html
@@ -108,7 +108,42 @@
             </div>
             <div class="feature-section-img">
                 <img src="images/architect.png" alt="">
-                <button class="btn-secondary"><span class="secondary"> 10+Year</span> <br> Experience</button>
+                <div class="btn-minus">
+                    <button class="btn-secondary"><span class="secondary"> 10+Year</span> <br> Experience</button>
+                </div>
+
+            </div>
+        </div>
+
+        <!-- facts section area -->
+        <div class="facts-section">
+            <div class="facts-info">
+                <h2 class="facts-info-title">Some Facts</h2>
+                <p>
+                    We’re a Toronto-based software development company but we’ve been fortunate to forge partnerships.
+                </p>
+            </div>
+            <div class="facts-box-area">
+                <div class="facts-box">
+                    <img src="images/icons/ribon.png" alt="">
+                    <h3>54</h3>
+                    <p>Awards Winnings</p>
+                </div>
+                <div class="facts-box">
+                    <img src="images/icons/projects.png" alt="">
+                    <h3>1458</h3>
+                    <p>Project Finished</p>
+                </div>
+                <div class="facts-box">
+                    <img src="images/icons/customers.png" alt="">
+                    <h3>590</h3>
+                    <p>Clients Worked</p>
+                </div>
+                <div class="facts-box">
+                    <img src="images/icons/email.png" alt="">
+                    <h3>22578</h3>
+                    <p>Email Send</p>
+                </div>
             </div>
         </div>
 
