--- a/index.html
+++ b/index.html
@@ -147,6 +147,23 @@
             </div>
         </div>
 
+        <!-- sponsor area -->
+        <div class="sponsor">
+            <div class="sponsor-description">
+                <h2>Our Sponspors</h2>
+                <p>
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration.
+                </p>
+            </div>
+            <div class="sponsor-img">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
+            </div>
+        </div>
     </main>
     <!-- footer area -->
     <footer>
