footer area added

--- a/index.html
+++ b/index.html
@@ -167,7 +167,9 @@
     </main>
     <!-- footer area -->
     <footer>
-
+        <div class="footer-area">
+            <p>All rights reserved copyright@2023 startup landing page design</p>
+        </div>
     </footer>
 </body>
 
