meet engineers section added

--- a/index.html
+++ b/index.html
@@ -164,6 +164,42 @@
                 <img src="images/sponsors/figma.png" alt="">
             </div>
         </div>
+
+        <!-- meet engineer -->
+        <div class="meet-engineer">
+            <h2>Meet Our Engineers</h2>
+            <div class="engineers">
+                <div class="engineer-box">
+                    <img src="images/engineers/1.jpg" alt="">
+                    <h3>John De</h3>
+                    <p>
+                        Heap is a small company with big data ambitions, and my team is the one that designs.
+                    </p>
+                </div>
+                <div class="engineer-box">
+                    <img src="images/engineers/2.jpg" alt="">
+                    <h3>Micky</h3>
+                    <p>
+                        Heap is a small company with big data ambitions, and my team is the one that designs.
+                    </p>
+                </div>
+                <div class="engineer-box">
+                    <img src="images/engineers/3.jpg" alt="">
+                    <h3>Tom Cruis</h3>
+                    <p>
+                        Heap is a small company with big data ambitions, and my team is the one that designs.
+                    </p>
+                </div>
+                <div class="engineer-box">
+                    <img src="images/engineers/4.jpg" alt="">
+                    <h3>Maxwell</h3>
+                    <p>
+                        Heap is a small company with big data ambitions, and my team is the one that designs.
+                    </p>
+                </div>
+            </div>
+
+        </div>
     </main>
     <!-- footer area -->
     <footer>
